# uteke

./: .cora.yaml  .dockerignore  .gitignore  AGENT.md  BLUEPRINT_V2.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README-OPTIMIZATION-PLAN.md  README-new.md  README-original-backup.md  README.id-new.md  README.id.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  install.sh  task1-config-result.md  task2-operations-result.md  task292-result.md  task3-lib-result.md  task304-result.md
.agents/skills/uteke-memory/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/cora-review/: action.yml
.github/workflows/: ci.yml  cora-review.yml  deploy-website.yml  project-sync.yml  release.yml  security.yml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
benchmarks/: RESULTS.md
benchmarks/longmemeval/: .gitignore  README.md  RESULTS.md  download_data.sh  print_metrics.py  requirements.txt  run_eval.py
benchmarks/longmemeval/results_diverse/: retrieval_results.jsonl
crates/uteke-cli/: Cargo.toml
crates/uteke-cli/assets/shell/: uteke-hook.bash
crates/uteke-cli/src/: bench.rs  cli.rs  commands.rs  config.rs  extract.rs  init.rs  logging.rs  main.rs  onboard.rs  output.rs  ui.rs
crates/uteke-cli/src/commands/: aging.rs  bench.rs  doc.rs  dream.rs  edges.rs  forget.rs  graph.rs  index.rs  list.rs  maintenance.rs  mod.rs  namespace.rs  orphans.rs  recall.rs  remember.rs  room.rs  server.rs  tags.rs  timeline.rs  update.rs  upgrade.rs
crates/uteke-cli/src/ui/: index.html
crates/uteke-core/: Cargo.toml  uteke_index.keys  uteke_index.usearch
crates/uteke-core/src/: chunker.rs  chunker_ts.rs  code_index.rs  consolidate.rs  dream.rs  edges.rs  error.rs  extraction.rs  graph.rs  graph_rerank.rs  import_export.rs  jaccard.rs  lib.rs  maintenance.rs  operations.rs  orphans.rs  recall_cache.rs  rooms.rs  salience_recency.rs  timeline.rs  types.rs
crates/uteke-core/src/embed/: embed_trait.rs  engine.rs  fallback.rs  mod.rs  ollama.rs  openai.rs
crates/uteke-core/src/memory/: aging.rs  bulk.rs  crud.rs  documents.rs  fts5.rs  indexed_files.rs  mod.rs  rooms.rs  schema.rs  store.rs  tags.rs  types.rs  vector.rs
crates/uteke-mcp/: Cargo.toml  README.md
crates/uteke-mcp/src/: lib.rs  main.rs
crates/uteke-server/: Cargo.toml
crates/uteke-server/src/: context.rs  handlers.rs  main.rs  types.rs
docs/: BENCHMARKS.md  architecture.md  benchmarks.md  cli-reference.md  comparison.md  configuration.md  docker.md  extensions.md  getting-started.md  index.md  install.md  mcp.md  multi-agent.md  package-lock.json  package.json  relationship-graph.md  roadmap.md  rooms.md  shell-hooks.md  smart-decay.md  time-travel.md  tls.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/assets/: uteke-infographic.html
docs/integrations/: hermes.md
docs/launch/: hn-post.md  twitter-thread.md
docs/plan/: 01-problem-statement-&-personal-use-case.md  02-technical-architecture-v2.md  03-development-plan-v2-4-6-weeks.md  04-open-source-strategy-&-community.md  05-future-roadmap-when-demand-exists.md  06-risk-assessment-v2-reduced-scope.md  bmad-round-2-validation-synthesis.md
docs/plan/v1-archive/: 00-parent-index.md  01-problem-analysis-&-market-research.md  02-product-vision-&-architecture.md  03-technical-specification.md  04-development-roadmap.md  05-target-users-&-use-cases.md  06-competitive-analysis.md  07-marketing-&-go-to-market.md  08-revenue-model-&-monetization.md  09-risk-assessment-&-mitigation.md  bmad-validation-+-agent-discussion-synthesis.md
docs/plans/: 2026-06-04-readme-landing-page-gtm.md  rfc-001-native-tool-calling.md
docs/public/: _redirects
examples/: python_hermes.py  python_uteke.py  test_hermes_integration.py  test_uteke_integration.py
extensions/hermes-memory-provider/: README.md  __init__.py.tmpl  plugin.yaml.tmpl
extensions/pi-memory-provider/: index.ts  package.json
extensions/uteke-status/: index.ts  package.json
scripts/: install.sh  verify_integration.sh
scripts/shell/: uteke-hook.bash  uteke-hook.fish  uteke-hook.zsh
website/: package-lock.json  package.json  svelte.config.js
website/src/: app.css  app.html
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/docs/: +layout.svelte  +page.svelte
website/src/routes/docs/cli-reference/: +page.svelte
website/src/routes/docs/configuration/: +page.svelte
website/src/routes/docs/extensions/: +page.svelte
website/src/routes/docs/multi-agent/: +page.svelte
website/src/routes/docs/roadmap/: +page.svelte
