[workspace]
resolver = "2"
members = [
    "crates/uteke-core",
    "crates/uteke-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ajianaz/uteke"
description = "The Brain for Your AI — persistent memory and smart context management"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better LTO
strip = true        # Strip debug symbols
panic = "abort"     # Smaller panic handler
