[workspace]
resolver = "2"
members = [
    "crates/uteke-core",
    "crates/uteke-cli",
    "crates/uteke-server",
]

[workspace.package]
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ajianaz/uteke"
description = "The Brain for Your AI — persistent memory and smart context management"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better LTO
strip = true        # Strip debug symbols
panic = "abort"     # Smaller panic handler

[profile.bench]
opt-level = 3
lto = true
