[package]
name = "uteke-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for uteke — persistent memory for AI agents"

[[bin]]
name = "uteke"
path = "src/main.rs"

[[bin]]
name = "memory-bench"
path = "src/bench.rs"

[dependencies]
uteke-core = { path = "../uteke-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "1"
serde = { version = "1", features = ["derive"] }
clap_complete = "4"
ctrlc = "3"
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
urlencoding = "2.1.3"
