[package]
name = "uteke-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for Uteke — persistent semantic memory for AI agents, offline-first, ~30ms recall"
keywords = ["cli", "memory", "ai", "vector-search", "offline"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "uteke"
path = "src/main.rs"

[dependencies]
uteke-core = { path = "../uteke-core", version = "0.10.0", features = ["onnx"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
dirs = "6"
toml = "1"
serde = { version = "1", features = ["derive"] }
clap_complete = "4"
ctrlc = "3"
tracing-appender = "0.2"
which = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
urlencoding = "2.1.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
