[package]
name = "uteke-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true
keywords = ["memory", "ai", "embedding", "vector-search", "semantic"]
categories = ["science", "data-structures"]
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
usearch = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
tokenizers = "0.23"
dirs = "6"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
