[package]
name = "uteke-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true
keywords = ["memory", "ai", "embedding", "vector-search", "semantic"]
categories = ["science", "data-structures"]
readme = "../../README.md"

[features]
default = ["onnx"]
onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers"]
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-go",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
usearch = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2"
dirs = "6"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
fs2 = "0.4"
# ONNX-only dependencies (gated behind `onnx` feature)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.23", optional = true }
sha2 = { version = "0.11" }

# Tree-sitter AST chunking (gated behind `treesitter` feature). The `unsafe`
# code lives inside the grammar crates; consumer code here stays safe.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
